--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Weather of cities with node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node app.js"
   },
   "author": "Eric Vonarx",
   "license": "ISC",
